--- a/DailyExpenseNote/app/src/main/res/layout/activity_add_expense.xml
+++ b/DailyExpenseNote/app/src/main/res/layout/activity_add_expense.xml
@@ -1,107 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AddExpenseActivity">
-
-    <androidx.appcompat.widget.Toolbar
+<layout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".AddExpenseActivity">
 
-
-        <LinearLayout
-            android:orientation="horizontal"
+        <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:src="@drawable/ic_keyboard_backspace_black_24dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add New Expense "
-                android:textSize="16sp"
-                android:textColor="@android:color/white"
-                android:textAlignment="center"
-                android:layout_marginRight="18dp"/>
-
-
-        </LinearLayout>
-
-    </androidx.appcompat.widget.Toolbar>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="5dp">
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            >
 
 
             <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/backPressID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:src="@drawable/ic_keyboard_backspace_black_24dp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Expense Type"
+                    android:text="Add New Expense "
+                    android:textSize="16sp"
+                    android:textColor="@android:color/white"
                     android:textAlignment="center"
-                    android:textSize="14sp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Electricity Bill"
-                    android:textAlignment="center"
-                    android:textSize="10sp"
-                    android:textColor="@color/gray"/>
+                    android:layout_marginRight="18dp"/>
 
 
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:background="@color/gray"
-                android:layout_height=".5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="5dp"/>
+
+        </androidx.appcompat.widget.Toolbar>
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="5dp">
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp">
+                android:orientation="vertical"
+                android:padding="5dp">
+
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight=".5">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Expense Date"
+                        android:text="Expense Type"
                         android:textAlignment="center"
                         android:textSize="14sp"
                         android:textColor="@color/black"/>
@@ -109,7 +74,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="01-jul-2019"
+                        android:text="Electricity Bill"
                         android:textAlignment="center"
                         android:textSize="10sp"
                         android:textColor="@color/gray"/>
@@ -117,128 +82,166 @@
 
                 </LinearLayout>
                 <View
-                    android:layout_width=".5dp"
+                    android:layout_width="match_parent"
                     android:background="@color/gray"
-                    android:layout_height="match_parent"/>
+                    android:layout_height=".5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"/>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".5"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Expense Time"
-                        android:textSize="14sp"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"/>
+                        android:orientation="vertical"
+                        android:layout_weight=".5">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Expense Date"
+                            android:textAlignment="center"
+                            android:textSize="14sp"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="01-jul-2019"
+                            android:textAlignment="center"
+                            android:textSize="10sp"
+                            android:textColor="@color/gray"/>
 
 
-                    <TextView
-                        android:layout_width="match_parent"
+                    </LinearLayout>
+                    <View
+                        android:layout_width=".5dp"
+                        android:background="@color/gray"
+                        android:layout_height="match_parent"/>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="2:00 pm"
-                        android:textSize="10sp"
-                        android:textAlignment="center"
-                        android:textColor="@color/gray"/>
+                        android:layout_weight=".5"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Expense Time"
+                            android:textSize="14sp"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"/>
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="2:00 pm"
+                            android:textSize="10sp"
+                            android:textAlignment="center"
+                            android:textColor="@color/gray"/>
+
+
+                    </LinearLayout>
+
+
 
 
                 </LinearLayout>
 
-
-
-
             </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:hint="Enter Amont"
+            android:digits="0123456789."
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:layout_marginBottom="20dp">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_photo_camera_black_24dp"
+                android:layout_gravity="center"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Receipt (optional)"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:hint="Enter Amont"
-        android:digits="0123456789."
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="20dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp"
-        android:layout_marginBottom="20dp">
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ic_photo_camera_black_24dp"
-            android:layout_gravity="center"
-          />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Receipt (optional)"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"/>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="2dp"
-            android:padding="5dp"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="10dp">
-
-        <ImageView
+        <RelativeLayout
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/demo"
-            />
-        </androidx.cardview.widget.CardView>
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:visibility="gone">
 
-        <ImageView
-            android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="2dp"
+                android:padding="5dp"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="10dp">
+
+                <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/demo"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="2dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_cancel_black_24dp"/>
+        </RelativeLayout>
+
+
+
+
+
+
+
+        <Button
+            android:id="@+id/saveExpenseBTN"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="2dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_cancel_black_24dp"/>
-    </RelativeLayout>
+            android:text="save"
+            android:textSize="14sp"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"/>
 
 
 
-
-
-
-
-    <Button
-        android:id="@+id/saveExpenseBTN"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="save"
-        android:textSize="14sp"
-        android:background="@color/colorPrimary"
-        android:textColor="#FFFFFF"/>
-
-
-
-</LinearLayout>
+    </LinearLayout>
+</layout>
