--- a/DailyExpenseNote/app/src/main/res/layout/activity_main.xml
+++ b/DailyExpenseNote/app/src/main/res/layout/activity_main.xml
@@ -1,241 +1,246 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
-  <androidx.appcompat.widget.Toolbar
-      android:layout_width="match_parent"
-      android:layout_height="?attr/actionBarSize"
-      android:background="@color/colorPrimary"
-     >
-
-    <TextView
+<layout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:textAlignment="center"
-        android:layout_marginRight="18dp"/>
-
-  </androidx.appcompat.widget.Toolbar>
-
-  <androidx.cardview.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="5dp"
-      app:cardCornerRadius="5dp">
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="5dp">
+        tools:context=".MainActivity">
 
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="Filter By"
-          android:textSize="14sp"
-          android:textColor="@color/colorPrimaryDark"/>
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            >
 
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal"
-          android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:textAlignment="center"
+                android:layout_marginRight="18dp"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight=".5">
+        </androidx.appcompat.widget.Toolbar>
 
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="From Date"
-              android:textAlignment="center"
-              android:textSize="14sp"
-              android:textColor="@color/black"/>
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="01-jul-2019"
-              android:textAlignment="center"
-              android:textSize="10sp"
-              android:textColor="@color/gray"/>
-
-
-        </LinearLayout>
-        <View
-            android:layout_width=".5dp"
-            android:background="@color/gray"
-            android:layout_height="match_parent"/>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:orientation="vertical">
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="To Date"
-              android:textSize="14sp"
-              android:textAlignment="center"
-              android:textColor="@color/black"/>
-
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="15-jul-2019"
-              android:textSize="10sp"
-              android:textAlignment="center"
-              android:textColor="@color/gray"/>
-
-
-        </LinearLayout>
-
-
-
-
-      </LinearLayout>
-
-      <View
-          android:layout_width="match_parent"
-          android:background="@color/gray"
-          android:layout_height=".5dp"
-          android:layout_marginTop="5dp"
-          android:layout_marginLeft="5dp"/>
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical">
-
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Expense Type"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:textColor="@color/black"/>
+            android:layout_margin="5dp"
+            app:cardCornerRadius="5dp">
 
-        <TextView
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Filter By"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimaryDark"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_weight=".5">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="From Date"
+                            android:textAlignment="center"
+                            android:textSize="14sp"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="01-jul-2019"
+                            android:textAlignment="center"
+                            android:textSize="10sp"
+                            android:textColor="@color/gray"/>
+
+
+                    </LinearLayout>
+                    <View
+                        android:layout_width=".5dp"
+                        android:background="@color/gray"
+                        android:layout_height="match_parent"/>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".5"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="To Date"
+                            android:textSize="14sp"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"/>
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="15-jul-2019"
+                            android:textSize="10sp"
+                            android:textAlignment="center"
+                            android:textColor="@color/gray"/>
+
+
+                    </LinearLayout>
+
+
+
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@color/gray"
+                    android:layout_height=".5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Expense Type"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Electricity Bill"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        android:textColor="@color/gray"/>
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Electricity Bill"
-            android:textAlignment="center"
-            android:textSize="10sp"
-            android:textColor="@color/gray"/>
+            android:layout_margin="5dp"
+            android:layout_height="80dp">
 
 
-      </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="5dp">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Expense"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimary"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="10000 TK"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/gray"/>
+
+
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:id="@+id/listTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Expense List"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimary"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_below="@+id/listTV"
+                    android:id="@+id/recyclerViewID"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+                <LinearLayout
+                    android:layout_below="@id/recyclerViewID"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/showItemview"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/model_expense_item"></include>
+                    <include layout="@layout/model_expense_item"></include>
+                    <include layout="@layout/model_expense_item"></include>
+                    <include layout="@layout/model_expense_item"></include>
+
+                </LinearLayout>
+
+
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_add_white_24dp"
+
+                    />
+
+
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
-  </androidx.cardview.widget.CardView>
-
-  <androidx.cardview.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_margin="5dp"
-      android:layout_height="80dp">
-
-
-  <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:padding="5dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total Expense"
-        android:textSize="14sp"
-        android:textColor="@color/colorPrimary"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="10000 TK"
-        android:textSize="10sp"
-        android:textAlignment="center"
-        android:textColor="@color/gray"/>
-
-
-  </RelativeLayout>
-
-
-  </androidx.cardview.widget.CardView>
-
-  <androidx.cardview.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
-
-      <TextView
-          android:id="@+id/listTV"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Expense List"
-          android:textSize="14sp"
-          android:textColor="@color/colorPrimary"/>
-
-      <androidx.recyclerview.widget.RecyclerView
-          android:layout_below="@+id/listTV"
-          android:id="@+id/recyclerViewID"
-          android:layout_marginTop="10dp"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-
-
-      </androidx.recyclerview.widget.RecyclerView>
-
-        <LinearLayout
-            android:layout_below="@id/recyclerViewID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include layout="@layout/model_expense_item"></include>
-            <include layout="@layout/model_expense_item"></include>
-            <include layout="@layout/model_expense_item"></include>
-            <include layout="@layout/model_expense_item"></include>
-
-        </LinearLayout>
-
-
-
-      <com.google.android.material.floatingactionbutton.FloatingActionButton
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:layout_alignParentRight="true"
-          android:src="@drawable/ic_add_white_24dp"
-
-          />
-
-
-    </RelativeLayout>
-
-
-  </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+</layout>
